--- a/content-client/src/components/news/NewsItem.css
+++ b/content-client/src/components/news/NewsItem.css
@@ -5,4 +5,25 @@ img {
 
 .card {
     height: fit-content;
+    max-height: 300px;
+    width: 500px;
+}
+* {
+
+}
+.date {
+    padding-left: 10pt;
+    font-size: 0.875rem !important;
+}
+
+.MuiCardHeader-root {
+    padding-bottom: 2pt !important;
+}
+
+.MuiCardContent-root {
+    padding-top: 2pt !important;
+}
+
+.content {
+    font-size: 1rem !important;
 }
