--- a/content-client/src/components/news/NewsItem.css
+++ b/content-client/src/components/news/NewsItem.css
@@ -5,12 +5,11 @@ img {
 
 .card {
     height: fit-content;
-    max-height: 300px;
-    width: 500px;
+    max-height: 600pt;
+    width: 200pt;
+    max-width: 1000pt;
 }
-* {
 
-}
 .date {
     padding-left: 10pt;
     font-size: 0.875rem !important;
